@@ -2,18 +2,22 @@ package org.sparta.hub.application;
 
 import lombok.RequiredArgsConstructor;
 import org.sparta.hub.domain.entity.Hub;
+import org.sparta.hub.domain.model.HubStatus;
 import org.sparta.hub.domain.repository.HubRepository;
+import org.sparta.hub.exception.AlreadyDeletedHubException;
 import org.sparta.hub.exception.DuplicateHubNameException;
 import org.sparta.hub.exception.HubNotFoundException;
 import org.sparta.hub.presentation.dto.request.HubCreateRequest;
+import org.sparta.hub.presentation.dto.request.HubUpdateRequest;
 import org.sparta.hub.presentation.dto.response.HubCreateResponse;
 import org.sparta.hub.presentation.dto.response.HubResponse;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.Locale;
 import java.util.UUID;
-import java.util.stream.Collectors;
+
 
 /**
  * 허브 도메인의 핵심 비즈니스 로직 서비스 계층
@@ -24,7 +28,11 @@ import java.util.stream.Collectors;
 public class HubService {
 
     private final HubRepository hubRepository;
+    private static final String DEFAULT_DELETER = "system";
 
+    /**
+     * 허브 생성 기능 - creatHub
+     */
     @Transactional
     public HubCreateResponse createHub(HubCreateRequest request) {
         if (hubRepository.existsByName(request.name())) {
@@ -42,16 +50,81 @@ public class HubService {
         return HubCreateResponse.from(saved);
     }
 
-    public List<HubResponse> getAllHubs() {
-        return hubRepository.findAll()
-                .stream()
+    /**
+     * 허브 전체 조회 - 사용자용
+     *  ACTIVE 상태 허브만 조회되게 허용
+     */
+    public List<HubResponse> getActiveHubsForUser() {
+        return hubRepository.findAllByStatus(HubStatus.ACTIVE).stream()
                 .map(HubResponse::from)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    public HubResponse getHubById(UUID hubId) {
+    /**
+     * 허브 단건 조회 - 사용자용
+     *  ACTIVE 상태 허브만 조회되게 허용
+     */
+    public HubResponse getActiveHubByIdForUser(UUID hubId) {
+        Hub hub = hubRepository.findById(hubId)
+                .orElseThrow(() -> new HubNotFoundException(hubId));
+        if (hub.isDeleted()) {
+            // INACTIVE(=소프트 삭제)면 사용자에겐 404 처리
+            throw new HubNotFoundException(hubId);
+        }
+        return HubResponse.from(hub);
+    }
+
+    /**
+     * 허브 전체 조회 - 운영자용
+     *  모든 상태의 허브 조회
+     */
+    public List<HubResponse> getHubsForAdmin(String statusParam) {
+        String normalized = statusParam == null ? "ALL" : statusParam.toUpperCase(Locale.ROOT);
+        if ("ALL".equals(normalized)) {
+            return hubRepository.findAll().stream().map(HubResponse::from).toList();
+        }
+        HubStatus status = HubStatus.valueOf(normalized);
+        return hubRepository.findAllByStatus(status).stream().map(HubResponse::from).toList();
+    }
+
+    /**
+     * 허브 단건 조회 - 운영자용
+     *  모든 상태의 허브 조회
+     */
+    public HubResponse getHubByIdForAdmin(UUID hubId) {
         Hub hub = hubRepository.findById(hubId)
                 .orElseThrow(() -> new HubNotFoundException(hubId));
         return HubResponse.from(hub);
     }
+
+    /**
+     * 허브 수정 - updateHub
+     */
+    @Transactional
+    public HubResponse updateHub(UUID hubId, HubUpdateRequest request) {
+        Hub hub = hubRepository.findById(hubId)
+                .orElseThrow(() -> new HubNotFoundException(hubId));
+
+        hub.update(request.address(), request.latitude(), request.longitude(), request.status());
+        return HubResponse.from(hub);
+    }
+
+    /**
+     * 허브 삭제(비활성화) - deleteHub
+     */
+    @Transactional
+    public void deleteHub(UUID hubId) {
+        Hub hub = hubRepository.findById(hubId)
+                .orElseThrow(() -> new HubNotFoundException(hubId));
+
+        // 이미 삭제된 허브인 경우
+        if (hub.isDeleted()) {
+            throw new AlreadyDeletedHubException();
+        }
+
+        // 허브 비활성화 처리 (Soft Delete)
+        hub.markDeleted(DEFAULT_DELETER);
+    }
+
+
 }
